--- a/index.html
+++ b/index.html
@@ -9,10 +9,21 @@
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto&display=swap" rel="stylesheet">
   <!-- Font Awesome for Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- Three.js Library -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <!-- Typed.js Library for Typewriter Effect -->
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  <!-- Swiper.js for Photo Carousel -->
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+  <!-- Lightbox2 for Image Lightbox -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
 </head>
 <body>
   <!-- Hearts Animation Canvas -->
   <canvas id="heartsCanvas"></canvas>
+
+  <!-- Background Music -->
+  <audio id="backgroundMusic" src="Brent Morgan - Grow Old With You (Lyric Video).mp3" autoplay loop></audio>
 
   <!-- Main Content -->
   <div id="main-container">
@@ -34,16 +45,111 @@
     <section id="home" class="section active-section">
       <h1>Welcome to Your Special Day</h1>
       <p>Celebrating the most amazing person in my life.</p>
+
+      <!-- Interactive Messages -->
+      <div class="interactive-messages">
+        <div class="interactive-message">
+          <div class="visible">Our first date.</div>
+          <div class="hidden">Epic Movie was so bad.</div>
+        </div>
+        <div class="interactive-message">
+          <div class="visible">Your psychic abilities.</div>
+          <div class="hidden">I’ll never get to be telepathic 😢</div>
+        </div>
+        <div class="interactive-message">
+          <div class="visible">You’re the best partner I could ask for</div>
+          <div class="hidden">Love you to the 🌙 and to 🪐</div>
+        </div>
+        <div class="interactive-message">
+          <div class="visible">Raising the coolest kid in the world</div>
+          <div class="hidden">Who else jams to both Taylor Swift and Ice Nine Kills?</div>
+        </div>
+        <div class="interactive-message">
+          <div class="visible">We are the best at planning pranks.</div>
+          <div class="hidden">April Fools Day will forever be ours</div>
+        </div>
+        <div class="interactive-message">
+          <div class="visible">Destroying Christmas Trees</div>
+          <div class="hidden">Not sure why you hate them so much</div>
+        </div>
+        <div class="interactive-message">
+          <div class="visible">Destroying lawnmowers</div>
+          <div class="hidden">Don’t know why you hate these either 🤔</div>
+        </div>
+        <div class="interactive-message">
+          <div class="visible">Lazy Sunday’s (and Tuesdays)</div>
+          <div class="hidden">Every moment with is Home.</div>
+        </div>
+      </div>
+
+      <!-- Typewriter Effect -->
+      <div id="typewriter" class="typewriter-effect"></div>
+
+      <!-- Surprise Buttons -->
+      <div class="surprise-buttons">
+        <button class="surprise-button">Reveal Surprise 1</button>
+        <button class="surprise-button">Reveal Surprise 2</button>
+        <button class="surprise-button">Reveal Surprise 3</button>
+        <button class="surprise-button">Reveal Surprise 4</button>
+        <button class="surprise-button">Reveal Surprise 5</button>
+        <button class="surprise-button">Reveal Surprise 6</button>
+        <button class="surprise-button">Reveal Surprise 7</button>
+        <button class="surprise-button">Reveal Surprise 8</button>
+      </div>
+
+      <!-- 3D Text and Heart -->
+      <div id="threeDContainer"></div>
+
+      <!-- Countdown Timers -->
+      <div class="countdown-timers">
+        <div class="countdown">
+          <h3>Anniversary Countdown</h3>
+          <div id="countdown1"></div>
+        </div>
+        <div class="countdown">
+          <h3>When We Were Young Fest</h3>
+          <div id="countdown2"></div>
+        </div>
+      </div>
+
+      <!-- Relationship Milestones Chart -->
+      <div class="chart-container">
+        <canvas id="milestonesChart"></canvas>
+      </div>
     </section>
 
     <!-- Gallery Section -->
     <section id="gallery" class="section">
       <h2>Our Memories</h2>
-      <div class="gallery-container">
-        <img src="https://via.placeholder.com/300x200.png?text=Photo+1" alt="Memory 1">
-        <img src="https://via.placeholder.com/300x200.png?text=Photo+2" alt="Memory 2">
-        <img src="https://via.placeholder.com/300x200.png?text=Photo+3" alt="Memory 3">
-        <img src="https://via.placeholder.com/300x200.png?text=Photo+4" alt="Memory 4">
+      <!-- Photo Carousel -->
+      <div class="swiper-container">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <a href="https://via.placeholder.com/800x600.png?text=Photo+1" data-lightbox="gallery" data-title="Memory 1">
+              <img src="https://via.placeholder.com/300x200.png?text=Photo+1" alt="Memory 1">
+            </a>
+          </div>
+          <div class="swiper-slide">
+            <a href="https://via.placeholder.com/800x600.png?text=Photo+2" data-lightbox="gallery" data-title="Memory 2">
+              <img src="https://via.placeholder.com/300x200.png?text=Photo+2" alt="Memory 2">
+            </a>
+          </div>
+          <div class="swiper-slide">
+            <a href="https://via.placeholder.com/800x600.png?text=Photo+3" data-lightbox="gallery" data-title="Memory 3">
+              <img src="https://via.placeholder.com/300x200.png?text=Photo+3" alt="Memory 3">
+            </a>
+          </div>
+          <div class="swiper-slide">
+            <a href="https://via.placeholder.com/800x600.png?text=Photo+4" data-lightbox="gallery" data-title="Memory 4">
+              <img src="https://via.placeholder.com/300x200.png?text=Photo+4" alt="Memory 4">
+            </a>
+          </div>
+        </div>
+        <!-- Add Arrows -->
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <!-- Add Pagination -->
+        <div class="swiper-pagination"></div>
       </div>
     </section>
 
@@ -73,6 +179,49 @@
       <a href="#"><i class="fas fa-envelope"></i></a>
     </div>
   </footer>
+
+  <!-- Happy Birthday Modal -->
+  <div id="birthdayModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
+    <div class="bg-white rounded-lg shadow-lg p-6 text-black w-full max-w-xl relative modal-content">
+      <h2 class="text-4xl fun-font text-center mb-4">
+        <span class="animate-bounce inline-block">H</span>
+        <span class="animate-bounce-delay inline-block">a</span>
+        <span class="animate-bounce-delay inline-block">p</span>
+        <span class="animate-bounce-delay inline-block">p</span>
+        <span class="animate-bounce-delay inline-block">y</span>
+        <span class="inline-block"> </span>
+        <span class="animate-bounce inline-block">B</span>
+        <span class="animate-bounce-delay inline-block">d</span>
+        <span class="animate-bounce-delay inline-block">a</span>
+        <span class="inline-block">y!</span>
+        <span class="inline-block"> </span>
+        <span class="animate-bounce inline-block">Z</span>
+        <span class="animate-bounce-delay inline-block">a</span>
+        <span class="animate-bounce-delay inline-block">c</span>
+        <span class="animate-bounce-delay inline-block">h</span>
+        <span class="inline-block">❤️</span>
+      </h2>
+      <p class="text-lg text-gray-600 text-center">Happy 33rd birthday Skye! I love you so much and I hope you have a great day and weekend. Another year of us turning older together, and I wouldn't change a thing. I can't wait to see where the next chapter takes us!</p>
+      <div class="interactive-explanations">
+        <p>You deserve all the happiness in the world</p>
+        <p>I hope #33 is the best one yet!</p>
+        <p>You are such an amazing person.</p>
+      </div>
+      <div class="text-center mt-6">
+        <button class="px-6 py-3 bg-blue-600 rounded-lg hover:bg-blue-500 text-white" onclick="closeBirthdayModal()">Close</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Fireworks Canvas -->
+  <canvas id="fireworksCanvas"></canvas>
+
+  <!-- Include Swiper JS -->
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <!-- Include Lightbox2 JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+  <!-- Include Chart.js for Data Visualization -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
   <script src="script.js"></script>
 </body>
