--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <canvas id="heartsCanvas"></canvas>
 
   <!-- Background Music -->
-  <audio id="backgroundMusic" src="Brent Morgan - Grow Old With You (Lyric Video).mp3" autoplay loop></audio>
+  <audio id="backgroundMusic" src="Brent%20Morgan%20-%20Grow%20Old%20With%20You%20(Lyric%20Video).mp3" autoplay loop></audio>
 
   <!-- Main Content -->
   <div id="main-container">
@@ -43,7 +43,7 @@
 
     <!-- Home Section -->
     <section id="home" class="section active-section">
-      <h1>Welcome to Your Special Day</h1>
+      <h1>Happy Birthday Skye, I love you!</h1>
       <p>Celebrating the most amazing person in my life.</p>
 
       <!-- Interactive Messages -->
@@ -78,7 +78,7 @@
         </div>
         <div class="interactive-message">
           <div class="visible">Lazy Sunday’s (and Tuesdays)</div>
-          <div class="hidden">Every moment with is Home.</div>
+          <div class="hidden">Every moment with you is Home.</div>
         </div>
       </div>
 
@@ -87,14 +87,14 @@
 
       <!-- Surprise Buttons -->
       <div class="surprise-buttons">
-        <button class="surprise-button">Reveal Surprise 1</button>
-        <button class="surprise-button">Reveal Surprise 2</button>
-        <button class="surprise-button">Reveal Surprise 3</button>
-        <button class="surprise-button">Reveal Surprise 4</button>
-        <button class="surprise-button">Reveal Surprise 5</button>
-        <button class="surprise-button">Reveal Surprise 6</button>
-        <button class="surprise-button">Reveal Surprise 7</button>
-        <button class="surprise-button">Reveal Surprise 8</button>
+        <button class="surprise-button" data-message="I love you more than anything in the world. You mean so much to me Skye, and I will always try my hardest to be the best man I can for you and Addy.">Reveal Surprise 1</button>
+        <button class="surprise-button" data-message="I can’t believe I get to share this life with you, and I always look forward to whatever the next adventure will bring.">Reveal Surprise 2</button>
+        <button class="surprise-button" data-message="You are so funny, beautiful and wonderful.">Reveal Surprise 3</button>
+        <button class="surprise-button" data-message="I love your blue eyes.">Reveal Surprise 4</button>
+        <button class="surprise-button" data-message="I love your smile.">Reveal Surprise 5</button>
+        <button class="surprise-button" data-message="I love your Sim house building skills.">Reveal Surprise 6</button>
+        <button class="surprise-button" data-message="I love your city planning abilities in Cities Skylines.">Reveal Surprise 7</button>
+        <button class="surprise-button" data-message="You may not be the best at carrying a Domino’s pizza out of the car, but that’s okay with me ❤️">Reveal Surprise 8</button>
       </div>
 
       <!-- 3D Text and Heart -->
