--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
   <canvas id="heartsCanvas"></canvas>
 
   <!-- Background Music -->
-  <audio id="backgroundMusic" src="Brent%20Morgan%20-%20Grow%20Old%20With%20You%20(Lyric%20Video).mp3" autoplay loop></audio>
+  <audio id="backgroundMusic" src="Growold.mp3" loop></audio>
+  <!-- Play Music Button -->
+  <button id="playMusicButton" class="play-music-button">Play Music</button>
 
   <!-- Main Content -->
   <div id="main-container">
@@ -87,14 +89,14 @@
 
       <!-- Surprise Buttons -->
       <div class="surprise-buttons">
-        <button class="surprise-button" data-message="I love you more than anything in the world. You mean so much to me Skye, and I will always try my hardest to be the best man I can for you and Addy.">Reveal Surprise 1</button>
-        <button class="surprise-button" data-message="I can’t believe I get to share this life with you, and I always look forward to whatever the next adventure will bring.">Reveal Surprise 2</button>
-        <button class="surprise-button" data-message="You are so funny, beautiful and wonderful.">Reveal Surprise 3</button>
-        <button class="surprise-button" data-message="I love your blue eyes.">Reveal Surprise 4</button>
-        <button class="surprise-button" data-message="I love your smile.">Reveal Surprise 5</button>
-        <button class="surprise-button" data-message="I love your Sim house building skills.">Reveal Surprise 6</button>
-        <button class="surprise-button" data-message="I love your city planning abilities in Cities Skylines.">Reveal Surprise 7</button>
-        <button class="surprise-button" data-message="You may not be the best at carrying a Domino’s pizza out of the car, but that’s okay with me ❤️">Reveal Surprise 8</button>
+        <button class="surprise-button" data-message="I love you more than anything in the world. You mean so much to me Skye, and I will always try my hardest to be the best man I can for you and Addy.">Push here</button>
+        <button class="surprise-button" data-message="I can’t believe I get to share this life with you, and I always look forward to whatever the next adventure will bring.">Push here</button>
+        <button class="surprise-button" data-message="You are so funny, beautiful and wonderful.">Push here</button>
+        <button class="surprise-button" data-message="I love your blue eyes.">Push here</button>
+        <button class="surprise-button" data-message="I love your smile.">Push here</button>
+        <button class="surprise-button" data-message="I love your Sim house building skills.">Push here</button>
+        <button class="surprise-button" data-message="I love your city planning abilities in Cities Skylines.">Push here</button>
+        <button class="surprise-button" data-message="You may not be the best at carrying a Domino’s pizza out of the car, but that’s okay with me ❤️">Push here</button>
       </div>
 
       <!-- 3D Text and Heart -->
