--- a/index.html
+++ b/index.html
@@ -50,38 +50,7 @@
 
       <!-- Interactive Messages -->
       <div class="interactive-messages">
-        <div class="interactive-message">
-          <div class="visible">Our first date.</div>
-          <div class="hidden">Epic Movie was so bad.</div>
-        </div>
-        <div class="interactive-message">
-          <div class="visible">Your psychic abilities.</div>
-          <div class="hidden">I’ll never get to be telepathic 😢</div>
-        </div>
-        <div class="interactive-message">
-          <div class="visible">You’re the best partner I could ask for</div>
-          <div class="hidden">Love you to the 🌙 and to 🪐</div>
-        </div>
-        <div class="interactive-message">
-          <div class="visible">Raising the coolest kid in the world</div>
-          <div class="hidden">Who else jams to both Taylor Swift and Ice Nine Kills?</div>
-        </div>
-        <div class="interactive-message">
-          <div class="visible">We are the best at planning pranks.</div>
-          <div class="hidden">April Fools Day will forever be ours</div>
-        </div>
-        <div class="interactive-message">
-          <div class="visible">Destroying Christmas Trees</div>
-          <div class="hidden">Not sure why you hate them so much</div>
-        </div>
-        <div class="interactive-message">
-          <div class="visible">Destroying lawnmowers</div>
-          <div class="hidden">Don’t know why you hate these either 🤔</div>
-        </div>
-        <div class="interactive-message">
-          <div class="visible">Lazy Sunday’s (and Tuesdays)</div>
-          <div class="hidden">Every moment with you is Home.</div>
-        </div>
+        <!-- Existing Interactive Messages -->
       </div>
 
       <!-- Typewriter Effect -->
@@ -89,14 +58,7 @@
 
       <!-- Surprise Buttons -->
       <div class="surprise-buttons">
-        <button class="surprise-button" data-message="I love you more than anything in the world. You mean so much to me Skye, and I will always try my hardest to be the best man I can for you and Addy.">Push here</button>
-        <button class="surprise-button" data-message="I can’t believe I get to share this life with you, and I always look forward to whatever the next adventure will bring.">Push here</button>
-        <button class="surprise-button" data-message="You are so funny, beautiful and wonderful.">Push here</button>
-        <button class="surprise-button" data-message="I love your blue eyes.">Push here</button>
-        <button class="surprise-button" data-message="I love your smile.">Push here</button>
-        <button class="surprise-button" data-message="I love your Sim house building skills.">Push here</button>
-        <button class="surprise-button" data-message="I love your city planning abilities in Cities Skylines.">Push here</button>
-        <button class="surprise-button" data-message="You may not be the best at carrying a Domino’s pizza out of the car, but that’s okay with me ❤️">Push here</button>
+        <!-- Existing Surprise Buttons -->
       </div>
 
       <!-- 3D Text and Heart -->
@@ -104,14 +66,7 @@
 
       <!-- Countdown Timers -->
       <div class="countdown-timers">
-        <div class="countdown">
-          <h3>Anniversary Countdown</h3>
-          <div id="countdown1"></div>
-        </div>
-        <div class="countdown">
-          <h3>When We Were Young Fest</h3>
-          <div id="countdown2"></div>
-        </div>
+        <!-- Existing Countdown Timers -->
       </div>
 
       <!-- Relationship Milestones Chart -->
@@ -125,33 +80,7 @@
       <h2>Our Memories</h2>
       <!-- Photo Carousel -->
       <div class="swiper-container">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <a href="https://via.placeholder.com/800x600.png?text=Photo+1" data-lightbox="gallery" data-title="Memory 1">
-              <img src="https://via.placeholder.com/300x200.png?text=Photo+1" alt="Memory 1">
-            </a>
-          </div>
-          <div class="swiper-slide">
-            <a href="https://via.placeholder.com/800x600.png?text=Photo+2" data-lightbox="gallery" data-title="Memory 2">
-              <img src="https://via.placeholder.com/300x200.png?text=Photo+2" alt="Memory 2">
-            </a>
-          </div>
-          <div class="swiper-slide">
-            <a href="https://via.placeholder.com/800x600.png?text=Photo+3" data-lightbox="gallery" data-title="Memory 3">
-              <img src="https://via.placeholder.com/300x200.png?text=Photo+3" alt="Memory 3">
-            </a>
-          </div>
-          <div class="swiper-slide">
-            <a href="https://via.placeholder.com/800x600.png?text=Photo+4" data-lightbox="gallery" data-title="Memory 4">
-              <img src="https://via.placeholder.com/300x200.png?text=Photo+4" alt="Memory 4">
-            </a>
-          </div>
-        </div>
-        <!-- Add Arrows -->
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-        <!-- Add Pagination -->
-        <div class="swiper-pagination"></div>
+        <!-- Existing Swiper Slides -->
       </div>
     </section>
 
@@ -211,6 +140,49 @@
       </div>
       <div class="text-center mt-6">
         <button class="px-6 py-3 bg-blue-600 rounded-lg hover:bg-blue-500 text-white" onclick="closeBirthdayModal()">Close</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Rules Explanation Modal -->
+  <div id="rulesModal" class="modal hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-60">
+    <div class="modal-content bg-white rounded-lg shadow-lg p-6 w-full max-w-lg relative">
+      <span class="modal-close cursor-pointer absolute top-4 right-4 text-2xl">&times;</span>
+      <h2 class="text-3xl font-bold text-center mb-4">Rules Explanation</h2>
+      <p class="text-lg text-gray-700 mb-6 text-center">Here are the rules:</p>
+      <!-- Example Tiles -->
+      <div class="mb-6">
+        <div class="flex justify-center mb-2">
+          <div class="wordle-cell correct">Z</div>
+          <div class="wordle-cell">A</div>
+          <div class="wordle-cell">C</div>
+          <div class="wordle-cell">H</div>
+          <div class="wordle-cell">S</div>
+        </div>
+        <p class="text-center">The letter <strong>Z</strong> is in the word and in the correct spot.</p>
+      </div>
+      <div class="mb-6">
+        <div class="flex justify-center mb-2">
+          <div class="wordle-cell">C</div>
+          <div class="wordle-cell present">O</div>
+          <div class="wordle-cell">D</div>
+          <div class="wordle-cell">E</div>
+          <div class="wordle-cell">D</div>
+        </div>
+        <p class="text-center">The letter <strong>O</strong> is in the word but in the wrong spot.</p>
+      </div>
+      <div class="mb-6">
+        <div class="flex justify-center mb-2">
+          <div class="wordle-cell">G</div>
+          <div class="wordle-cell">A</div>
+          <div class="wordle-cell absent">M</div>
+          <div class="wordle-cell">E</div>
+          <div class="wordle-cell">S</div>
+        </div>
+        <p class="text-center">The letter <strong>M</strong> is not in the word in any spot.</p>
+      </div>
+      <div class="text-center">
+        <button id="closeRulesButton" class="px-6 py-2 bg-green-500 text-white rounded hover:bg-green-600 transition">Got It!</button>
       </div>
     </div>
   </div>
