--- a/index.html
+++ b/index.html
@@ -184,15 +184,15 @@
 
   <!-- Rules Explanation Modal -->
   <div id="rulesModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-60 hidden">
-    <div class="modal-content bg-white rounded-lg shadow-lg p-6 w-full max-w-lg relative">
+    <div class="modal-content bg-white rounded-lg shadow-lg p-6 relative">
       <span class="modal-close cursor-pointer absolute top-4 right-4 text-2xl">&times;</span>
       <h2 class="text-3xl font-bold text-center mb-4">Happy 33rd Birthday Skye!</h2>
-      <p class="text-lg text-gray-700 mb-6 text-center">
+      <p class="text-lg text-gray-600 text-center">
         I love you so much and I hope you have a great day and weekend. Another year of us turning older together, and I wouldn't change a thing. I can't wait to see where the next chapter takes us!
       </p>
       <!-- Example Tiles -->
       <div class="mb-6">
-        <div class="flex justify-center mb-2">
+        <div class="flex space-x-2 justify-center mb-2">
           <div class="wordle-cell">Happy</div>
           <div class="wordle-cell">Bday!</div>
           <div class="wordle-cell">Zach❤️</div>
