--- a/index.html
+++ b/index.html
@@ -52,7 +52,38 @@
 
       <!-- Interactive Messages -->
       <div class="interactive-messages">
-        <!-- Existing interactive messages... -->
+        <div class="interactive-message">
+          <div class="visible">Our first date.</div>
+          <div class="hidden">Epic Movie was so bad.</div>
+        </div>
+        <div class="interactive-message">
+          <div class="visible">Your psychic abilities.</div>
+          <div class="hidden">I’ll never get to be telepathic 😢</div>
+        </div>
+        <div class="interactive-message">
+          <div class="visible">You’re the best partner I could ask for</div>
+          <div class="hidden">Love you to the 🌙 and to 🪐</div>
+        </div>
+        <div class="interactive-message">
+          <div class="visible">Raising the coolest kid in the world</div>
+          <div class="hidden">Who else jams to both Taylor Swift and Ice Nine Kills?</div>
+        </div>
+        <div class="interactive-message">
+          <div class="visible">We are the best at planning pranks.</div>
+          <div class="hidden">April Fools Day will forever be ours</div>
+        </div>
+        <div class="interactive-message">
+          <div class="visible">Destroying Christmas Trees</div>
+          <div class="hidden">Not sure why you hate them so much</div>
+        </div>
+        <div class="interactive-message">
+          <div class="visible">Destroying lawnmowers</div>
+          <div class="hidden">Don’t know why you hate these either 🤔</div>
+        </div>
+        <div class="interactive-message">
+          <div class="visible">Lazy Sunday’s (and Tuesdays)</div>
+          <div class="hidden">Every moment with you is Home.</div>
+        </div>
       </div>
 
       <!-- Typewriter Effect -->
@@ -60,7 +91,14 @@
 
       <!-- Surprise Buttons -->
       <div class="surprise-buttons">
-        <!-- Existing surprise buttons... -->
+        <button class="surprise-button" data-message="I love you more than anything in the world. You mean so much to me Skye, and I will always try my hardest to be the best man I can for you and Addy.">Push here</button>
+        <button class="surprise-button" data-message="I can’t believe I get to share this life with you, and I always look forward to whatever the next adventure will bring.">Push here</button>
+        <button class="surprise-button" data-message="You are so funny, beautiful and wonderful.">Push here</button>
+        <button class="surprise-button" data-message="I love your blue eyes.">Push here</button>
+        <button class="surprise-button" data-message="I love your smile.">Push here</button>
+        <button class="surprise-button" data-message="I love your Sim house building skills.">Push here</button>
+        <button class="surprise-button" data-message="I love your city planning abilities in Cities Skylines.">Push here</button>
+        <button class="surprise-button" data-message="You may not be the best at carrying a Domino’s pizza out of the car, but that’s okay with me ❤️">Push here</button>
       </div>
 
       <!-- 3D Text and Heart -->
@@ -68,7 +106,14 @@
 
       <!-- Countdown Timers -->
       <div class="countdown-timers">
-        <!-- Existing countdown timers... -->
+        <div class="countdown">
+          <h3>Anniversary Countdown</h3>
+          <div id="countdown1"></div>
+        </div>
+        <div class="countdown">
+          <h3>When We Were Young Fest</h3>
+          <div id="countdown2"></div>
+        </div>
       </div>
 
       <!-- Relationship Milestones Chart -->
@@ -82,7 +127,33 @@
       <h2>Our Memories</h2>
       <!-- Photo Carousel -->
       <div class="swiper-container">
-        <!-- Existing Swiper slides... -->
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <a href="https://via.placeholder.com/800x600.png?text=Photo+1" data-lightbox="gallery" data-title="Memory 1">
+              <img src="https://via.placeholder.com/300x200.png?text=Photo+1" alt="Memory 1">
+            </a>
+          </div>
+          <div class="swiper-slide">
+            <a href="https://via.placeholder.com/800x600.png?text=Photo+2" data-lightbox="gallery" data-title="Memory 2">
+              <img src="https://via.placeholder.com/300x200.png?text=Photo+2" alt="Memory 2">
+            </a>
+          </div>
+          <div class="swiper-slide">
+            <a href="https://via.placeholder.com/800x600.png?text=Photo+3" data-lightbox="gallery" data-title="Memory 3">
+              <img src="https://via.placeholder.com/300x200.png?text=Photo+3" alt="Memory 3">
+            </a>
+          </div>
+          <div class="swiper-slide">
+            <a href="https://via.placeholder.com/800x600.png?text=Photo+4" data-lightbox="gallery" data-title="Memory 4">
+              <img src="https://via.placeholder.com/300x200.png?text=Photo+4" alt="Memory 4">
+            </a>
+          </div>
+        </div>
+        <!-- Add Arrows -->
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <!-- Add Pagination -->
+        <div class="swiper-pagination"></div>
       </div>
     </section>
 
