--- a/index.html
+++ b/index.html
@@ -98,7 +98,6 @@
 
     /* Surprise Buttons */
     .surprise-button {
-      background-color: #ff4d4d;
       color: white;
       border: none;
       padding: 10px 20px;
@@ -106,10 +105,21 @@
       border-radius: 5px;
       cursor: pointer;
       transition: background-color 0.3s, transform 0.2s;
+      font-weight: 500;
     }
 
+    /* Assign different colors to each surprise button */
+    .surprise-button:nth-child(1) { background-color: #ef4444; /* Red */ }
+    .surprise-button:nth-child(2) { background-color: #eab308; /* Amber */ }
+    .surprise-button:nth-child(3) { background-color: #10b981; /* Green */ }
+    .surprise-button:nth-child(4) { background-color: #3b82f6; /* Blue */ }
+    .surprise-button:nth-child(5) { background-color: #8b5cf6; /* Purple */ }
+    .surprise-button:nth-child(6) { background-color: #f97316; /* Orange */ }
+    .surprise-button:nth-child(7) { background-color: #06b6d4; /* Teal */ }
+    .surprise-button:nth-child(8) { background-color: #d946ef; /* Violet */ }
+
     .surprise-button:hover {
-      background-color: #ff1a1a;
+      opacity: 0.8;
       transform: scale(1.05);
     }
 
@@ -171,28 +181,41 @@
     /* Modal Tiles */
     .modal-tiles {
       display: flex;
-      justify-content: space-around;
+      flex-direction: column;
+      align-items: center;
       margin-top: 20px;
-      flex-wrap: wrap;
       gap: 10px;
     }
 
-    .modal-tile {
-      width: 100px;
-      height: 100px;
-      background-color: #ffe6e6;
-      border: 2px solid #ffcccc;
-      border-radius: 10px;
+    .wordle-row {
+      display: flex;
+      gap: 5px;
+      margin-bottom: 10px;
+    }
+
+    .wordle-cell {
+      width: 60px;
+      height: 60px;
+      border: 2px solid #d1d5db; /* Tailwind gray-300 */
       display: flex;
       align-items: center;
       justify-content: center;
-      font-family: 'Press Start 2P', cursive;
       font-size: 1rem;
-      color: #ff4d4d;
+      font-weight: bold;
+      text-transform: uppercase;
+      transition: background-color 0.3s, border-color 0.3s;
+      background-color: white;
+      border-radius: 5px;
       cursor: default;
-      position: relative;
-      transition: transform 0.3s;
       animation: flip 0.6s, bounce 0.3s;
+    }
+
+    .wordle-cell.animate-flip {
+      animation: flip 0.6s forwards;
+    }
+
+    .wordle-cell.animate-bounce {
+      animation: bounce 0.3s;
     }
 
     @keyframes flip {
@@ -329,9 +352,13 @@
         align-items: center;
       }
 
-      .modal-tile {
-        width: 80px;
-        height: 80px;
+      .wordle-row {
+        flex-direction: row;
+      }
+
+      .wordle-cell {
+        width: 50px;
+        height: 50px;
         font-size: 0.8rem;
       }
     }
@@ -419,10 +446,29 @@
       
       <!-- Modal Tiles -->
       <div class="modal-tiles mt-6">
+        <!-- Happy -->
         <div class="wordle-row">
-          <div class="wordle-cell animate-flip animate-bounce">Happy</div>
-          <div class="wordle-cell animate-flip animate-bounce">Bday!</div>
-          <div class="wordle-cell animate-flip animate-bounce">Zach❤️</div>
+          <div class="wordle-cell animate-flip animate-bounce">H</div>
+          <div class="wordle-cell animate-flip animate-bounce">A</div>
+          <div class="wordle-cell animate-flip animate-bounce">P</div>
+          <div class="wordle-cell animate-flip animate-bounce">P</div>
+          <div class="wordle-cell animate-flip animate-bounce">Y</div>
+        </div>
+        <!-- Bday! -->
+        <div class="wordle-row">
+          <div class="wordle-cell animate-flip animate-bounce">B</div>
+          <div class="wordle-cell animate-flip animate-bounce">D</div>
+          <div class="wordle-cell animate-flip animate-bounce">A</div>
+          <div class="wordle-cell animate-flip animate-bounce">Y</div>
+          <div class="wordle-cell animate-flip animate-bounce">!</div>
+        </div>
+        <!-- Zach❤️ -->
+        <div class="wordle-row">
+          <div class="wordle-cell animate-flip animate-bounce">Z</div>
+          <div class="wordle-cell animate-flip animate-bounce">A</div>
+          <div class="wordle-cell animate-flip animate-bounce">C</div>
+          <div class="wordle-cell animate-flip animate-bounce">H</div>
+          <div class="wordle-cell animate-flip animate-bounce">❤</div>
         </div>
       </div>
       
